include/maplibre_native_c/runtime.h

typedef int64_t mln_offline_region_id;
typedef uint64_t mln_offline_operation_id;
typedef struct mln_offline_region_status {
  uint32_t size;
  uint32_t download_state;
  uint64_t completed_resource_count;
  uint64_t completed_resource_size;
  uint64_t completed_tile_count;
  uint64_t required_tile_count;
  uint64_t completed_tile_size;
  uint64_t required_resource_count;
  bool required_resource_count_is_precise;
  bool complete;
} mln_offline_region_status;
typedef enum mln_resource_provider_decision : uint32_t {
  MLN_RESOURCE_PROVIDER_DECISION_PASS_THROUGH = 0,
  MLN_RESOURCE_PROVIDER_DECISION_HANDLE = 1,
} mln_resource_provider_decision;
MLN_API mln_status mln_network_status_get(uint32_t* out_status) MLN_NOEXCEPT;
MLN_API mln_status mln_network_status_set(uint32_t status) MLN_NOEXCEPT;
typedef struct mln_runtime_options {
  uint32_t size;
  uint32_t flags;
  const char* asset_path;
  const char* cache_path;
  uint64_t event_mask;
} mln_runtime_options;
typedef struct mln_rendering_stats {
  double encoding_time;
  double rendering_time;
  int64_t frame_count;
  int64_t draw_call_count;
  int64_t total_draw_call_count;
} mln_rendering_stats;
typedef struct mln_runtime_event_render_frame {
  uint32_t mode;
  bool needs_repaint;
  bool placement_changed;
  mln_rendering_stats stats;
} mln_runtime_event_render_frame;
typedef struct mln_runtime_event_render_map {
  uint32_t mode;
} mln_runtime_event_render_map;
typedef struct mln_tile_id {
  uint32_t overscaled_z;
  int32_t wrap;
  uint32_t canonical_z;
  uint32_t canonical_x;
  uint32_t canonical_y;
} mln_tile_id;
typedef struct mln_runtime_event_tile_action {
  uint32_t operation;
  mln_tile_id tile_id;
} mln_runtime_event_tile_action;
typedef struct mln_runtime_event_camera_transition_finished {
  uint64_t transition_id;
} mln_runtime_event_camera_transition_finished;
typedef struct mln_runtime_event_offline_region_status {
  mln_offline_region_id region_id;
  mln_offline_region_status status;
} mln_runtime_event_offline_region_status;
typedef struct mln_runtime_event_offline_region_response_error {
  mln_offline_region_id region_id;
  uint32_t reason;
} mln_runtime_event_offline_region_response_error;
typedef struct mln_runtime_event_offline_region_tile_count_limit {
  mln_offline_region_id region_id;
  uint64_t limit;
} mln_runtime_event_offline_region_tile_count_limit;
typedef struct mln_runtime_event_offline_operation_completed {
  mln_offline_operation_id operation_id;
  uint32_t operation_kind;
  uint32_t result_kind;
  int32_t result_status;
  bool found;
} mln_runtime_event_offline_operation_completed;
typedef union mln_runtime_event_payload {
  mln_runtime_event_render_frame render_frame;
  mln_runtime_event_render_map render_map;
  mln_runtime_event_tile_action tile_action;
  mln_runtime_event_offline_region_status offline_region_status;
  mln_runtime_event_offline_region_response_error offline_region_response_error;
  mln_runtime_event_offline_region_tile_count_limit
    offline_region_tile_count_limit;
  mln_runtime_event_offline_operation_completed offline_operation_completed;
  mln_runtime_event_camera_transition_finished camera_transition_finished;
} mln_runtime_event_payload;
typedef struct mln_runtime_event {
  uint32_t type;
  uint32_t source_type;
  uint64_t source;
  int32_t code;
  uint32_t payload_type;
  uint32_t message_offset;
  uint32_t message_size;
  mln_runtime_event_payload payload;
} mln_runtime_event;
typedef struct mln_runtime_event_batch {
  uint32_t size;
  uint32_t event_size;
  const mln_runtime_event* events;
  size_t event_count;
  const char* messages;
  size_t messages_size;
  size_t remaining_count;
} mln_runtime_event_batch;
typedef struct mln_resource_transform_response {
  uint32_t size;
  const char* url;
  void* context;
} mln_resource_transform_response;
MLN_API mln_status mln_resource_transform_response_set_url(
  mln_resource_transform_response* response, const char* url, size_t url_size
) MLN_NOEXCEPT;
typedef mln_status (*mln_resource_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_resource_transform_response* out_response
);
typedef struct mln_resource_transform {
  uint32_t size;
  mln_resource_transform_callback callback;
  void* user_data;
} mln_resource_transform;
typedef struct mln_http_header_transform_response {
  uint32_t size;
  void* context;
} mln_http_header_transform_response;
MLN_API mln_status mln_http_header_transform_response_set(
  mln_http_header_transform_response* response, const char* name,
  size_t name_size, const char* value, size_t value_size
) MLN_NOEXCEPT;
typedef mln_status (*mln_http_header_transform_callback)(
  void* user_data, uint32_t kind, const char* url,
  mln_http_header_transform_response* out_response
);
typedef struct mln_http_header_transform {
  uint32_t size;
  mln_http_header_transform_callback callback;
  void* user_data;
} mln_http_header_transform;
typedef struct mln_resource_request {
  uint32_t size;
  const char* requested_url;
  const char* resolved_url;
  uint32_t kind;
  uint32_t loading_method;
  uint32_t priority;
  uint32_t usage;
  uint32_t storage_policy;
  bool has_range;
  uint64_t range_start;
  uint64_t range_end;
  bool has_prior_modified;
  int64_t prior_modified_unix_ms;
  bool has_prior_expires;
  int64_t prior_expires_unix_ms;
  const char* prior_etag;
  const uint8_t* prior_data;
  size_t prior_data_size;
} mln_resource_request;
typedef struct mln_resource_response {
  uint32_t size;
  uint32_t status;
  uint32_t error_reason;
  const uint8_t* bytes;
  size_t byte_count;
  const char* error_message;
  bool must_revalidate;
  bool has_modified;
  int64_t modified_unix_ms;
  bool has_expires;
  int64_t expires_unix_ms;
  const char* etag;
  bool has_retry_after;
  int64_t retry_after_unix_ms;
} mln_resource_response;
typedef uint32_t (*mln_resource_provider_callback)(
  void* user_data, const mln_resource_request* request,
  mln_resource_request_handle handle
);
typedef struct mln_resource_provider {
  uint32_t size;
  mln_resource_provider_callback callback;
  void* user_data;
} mln_resource_provider;
MLN_API mln_runtime_options mln_runtime_options_default(void) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_create(
  const mln_runtime_options* options, mln_runtime* out_runtime
) MLN_NOEXCEPT;
MLN_API mln_status mln_runtime_set_resource_provider(
  mln_runtime runtime, const mln_resource_provider* provider
) MLN_NOEXCEPT;
MLN_API mln_status
mln_runtime_clear_resource_provider(mln_runtime runtime) MLN_NOEXCEPT;
MLN_API mln_status mln_resource_request_complete(
  mln_resource_request_handle handle, const mln_resource_response* response
) MLN_NOEXCEPT;