bindings/dotnet/src/Maplibre.NativeFfi/Generated/runtime.g.cs


    [NativeTypeName("uint32_t")]
    internal enum mln_resource_provider_decision : uint
    {
        MLN_RESOURCE_PROVIDER_DECISION_PASS_THROUGH = 0,
        MLN_RESOURCE_PROVIDER_DECISION_HANDLE = 1,
    }

    internal unsafe partial struct mln_runtime_options
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint flags;

        [NativeTypeName("const char *")]
        public sbyte* asset_path;

        [NativeTypeName("const char *")]
        public sbyte* cache_path;

        [NativeTypeName("uint64_t")]
        public ulong event_mask;
    }

    internal partial struct mln_rendering_stats
    {
        public double encoding_time;

        public double rendering_time;

        [NativeTypeName("int64_t")]
        public long frame_count;

        [NativeTypeName("int64_t")]
        public long draw_call_count;

        [NativeTypeName("int64_t")]
        public long total_draw_call_count;
    }

    internal partial struct mln_runtime_event_render_frame
    {
        [NativeTypeName("uint32_t")]
        public uint mode;

        [NativeTypeName("bool")]
        public byte needs_repaint;

        [NativeTypeName("bool")]
        public byte placement_changed;

        public mln_rendering_stats stats;
    }

    internal partial struct mln_runtime_event_render_map
    {
        [NativeTypeName("uint32_t")]
        public uint mode;
    }

    internal partial struct mln_tile_id
    {
        [NativeTypeName("uint32_t")]
        public uint overscaled_z;

        [NativeTypeName("int32_t")]
        public int wrap;

        [NativeTypeName("uint32_t")]
        public uint canonical_z;

        [NativeTypeName("uint32_t")]
        public uint canonical_x;

        [NativeTypeName("uint32_t")]
        public uint canonical_y;
    }

    internal partial struct mln_runtime_event_tile_action
    {
        [NativeTypeName("uint32_t")]
        public uint operation;

        public mln_tile_id tile_id;
    }

    internal partial struct mln_runtime_event_camera_transition_finished
    {
        [NativeTypeName("uint64_t")]
        public ulong transition_id;
    }

    internal partial struct mln_runtime_event_offline_region_status
    {
        [NativeTypeName("mln_offline_region_id")]
        public long region_id;

        public mln_offline_region_status status;
    }

    internal partial struct mln_runtime_event_offline_region_response_error
    {
        [NativeTypeName("mln_offline_region_id")]
        public long region_id;

        [NativeTypeName("uint32_t")]
        public uint reason;
    }

    internal partial struct mln_runtime_event_offline_region_tile_count_limit
    {
        [NativeTypeName("mln_offline_region_id")]
        public long region_id;

        [NativeTypeName("uint64_t")]
        public ulong limit;
    }

    internal partial struct mln_runtime_event_offline_operation_completed
    {
        [NativeTypeName("mln_offline_operation_id")]
        public ulong operation_id;

        [NativeTypeName("uint32_t")]
        public uint operation_kind;

        [NativeTypeName("uint32_t")]
        public uint result_kind;

        [NativeTypeName("int32_t")]
        public int result_status;

        [NativeTypeName("bool")]
        public byte found;
    }

    [StructLayout(LayoutKind.Explicit)]
    internal partial struct mln_runtime_event_payload
    {
        [FieldOffset(0)]
        public mln_runtime_event_render_frame render_frame;

        [FieldOffset(0)]
        public mln_runtime_event_render_map render_map;

        [FieldOffset(0)]
        public mln_runtime_event_tile_action tile_action;

        [FieldOffset(0)]
        public mln_runtime_event_offline_region_status offline_region_status;

        [FieldOffset(0)]
        public mln_runtime_event_offline_region_response_error offline_region_response_error;

        [FieldOffset(0)]
        public mln_runtime_event_offline_region_tile_count_limit offline_region_tile_count_limit;

        [FieldOffset(0)]
        public mln_runtime_event_offline_operation_completed offline_operation_completed;

        [FieldOffset(0)]
        public mln_runtime_event_camera_transition_finished camera_transition_finished;
    }

    internal partial struct mln_runtime_event
    {
        [NativeTypeName("uint32_t")]
        public uint type;

        [NativeTypeName("uint32_t")]
        public uint source_type;

        [NativeTypeName("uint64_t")]
        public ulong source;

        [NativeTypeName("int32_t")]
        public int code;

        [NativeTypeName("uint32_t")]
        public uint payload_type;

        [NativeTypeName("uint32_t")]
        public uint message_offset;

        [NativeTypeName("uint32_t")]
        public uint message_size;

        public mln_runtime_event_payload payload;
    }

    internal unsafe partial struct mln_runtime_event_batch
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint event_size;

        [NativeTypeName("const mln_runtime_event *")]
        public mln_runtime_event* events;

        [NativeTypeName("size_t")]
        public nuint event_count;

        [NativeTypeName("const char *")]
        public sbyte* messages;

        [NativeTypeName("size_t")]
        public nuint messages_size;

        [NativeTypeName("size_t")]
        public nuint remaining_count;
    }

    internal unsafe partial struct mln_resource_transform_response
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("const char *")]
        public sbyte* url;

        public void* context;
    }

    internal unsafe partial struct mln_resource_transform
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("mln_resource_transform_callback")]
        public delegate* unmanaged[Cdecl]<void*, uint, sbyte*, mln_resource_transform_response*, mln_status> callback;

        public void* user_data;
    }

    internal unsafe partial struct mln_http_header_transform_response
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        public void* context;
    }

    internal unsafe partial struct mln_http_header_transform
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("mln_http_header_transform_callback")]
        public delegate* unmanaged[Cdecl]<void*, uint, sbyte*, mln_http_header_transform_response*, mln_status> callback;

        public void* user_data;
    }

    internal unsafe partial struct mln_resource_request
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("const char *")]
        public sbyte* requested_url;

        [NativeTypeName("const char *")]
        public sbyte* resolved_url;

        [NativeTypeName("uint32_t")]
        public uint kind;

        [NativeTypeName("uint32_t")]
        public uint loading_method;

        [NativeTypeName("uint32_t")]
        public uint priority;

        [NativeTypeName("uint32_t")]
        public uint usage;

        [NativeTypeName("uint32_t")]
        public uint storage_policy;

        [NativeTypeName("bool")]
        public byte has_range;

        [NativeTypeName("uint64_t")]
        public ulong range_start;

        [NativeTypeName("uint64_t")]
        public ulong range_end;

        [NativeTypeName("bool")]
        public byte has_prior_modified;

        [NativeTypeName("int64_t")]
        public long prior_modified_unix_ms;

        [NativeTypeName("bool")]
        public byte has_prior_expires;

        [NativeTypeName("int64_t")]
        public long prior_expires_unix_ms;

        [NativeTypeName("const char *")]
        public sbyte* prior_etag;

        [NativeTypeName("const uint8_t *")]
        public byte* prior_data;

        [NativeTypeName("size_t")]
        public nuint prior_data_size;
    }

    internal unsafe partial struct mln_resource_response
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("uint32_t")]
        public uint status;

        [NativeTypeName("uint32_t")]
        public uint error_reason;

        [NativeTypeName("const uint8_t *")]
        public byte* bytes;

        [NativeTypeName("size_t")]
        public nuint byte_count;

        [NativeTypeName("const char *")]
        public sbyte* error_message;

        [NativeTypeName("bool")]
        public byte must_revalidate;

        [NativeTypeName("bool")]
        public byte has_modified;

        [NativeTypeName("int64_t")]
        public long modified_unix_ms;

        [NativeTypeName("bool")]
        public byte has_expires;

        [NativeTypeName("int64_t")]
        public long expires_unix_ms;

        [NativeTypeName("const char *")]
        public sbyte* etag;

        [NativeTypeName("bool")]
        public byte has_retry_after;

        [NativeTypeName("int64_t")]
        public long retry_after_unix_ms;
    }

    internal unsafe partial struct mln_resource_provider
    {
        [NativeTypeName("uint32_t")]
        public uint size;

        [NativeTypeName("mln_resource_provider_callback")]
        public delegate* unmanaged[Cdecl]<void*, mln_resource_request*, MlnResourceRequest, uint> callback;

        public void* user_data;
    }

    internal static unsafe partial class NativeMethods
    {
        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_network_status_get([NativeTypeName("uint32_t *")] uint* out_status);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_network_status_set([NativeTypeName("uint32_t")] uint status);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_resource_transform_response_set_url(mln_resource_transform_response* response, [NativeTypeName("const char *")] sbyte* url, [NativeTypeName("size_t")] nuint url_size);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_http_header_transform_response_set(mln_http_header_transform_response* response, [NativeTypeName("const char *")] sbyte* name, [NativeTypeName("size_t")] nuint name_size, [NativeTypeName("const char *")] sbyte* value, [NativeTypeName("size_t")] nuint value_size);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_runtime_options mln_runtime_options_default();

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_runtime_create([NativeTypeName("const mln_runtime_options *")] mln_runtime_options* options, [NativeTypeName("mln_runtime *")] MlnRuntime* out_runtime);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_runtime_set_resource_provider([NativeTypeName("mln_runtime")] MlnRuntime runtime, [NativeTypeName("const mln_resource_provider *")] mln_resource_provider* provider);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_runtime_clear_resource_provider([NativeTypeName("mln_runtime")] MlnRuntime runtime);

        [DllImport("maplibre-native-c", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern mln_status mln_resource_request_complete([NativeTypeName("mln_resource_request_handle")] MlnResourceRequest handle, [NativeTypeName("const mln_resource_response *")] mln_resource_response* response);
